2012-11-10 Borut Razem <borut.razem AT gmail.com>

	* support/regression/ports/ds390/spec.mk:
	  doubled timeout since the gcc-torture-execute-20050224-1
	  regression test stil fails with timeout on i586-mingw32msvc

2012-11-09 Borut Razem <borut.razem AT gmail.com>

	* support/regression/fwk/lib/testfwk.c:
	  "code" substituted with "__code"

2012-11-08 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/bfd/Makefile.am,
	  support/sdbinutils/bfd/Makefile.in,
	  support/sdbinutils/include/opcode,
	  support/sdbinutils/include/opcode/ia64.h, 
	  support/sdbinutils/include/opcode/sparc.h,
	  support/sdbinutils/include/mach-o/x86-64.h, 
	  support/sdbinutils/bfd/verilog.c,
	  support/sdbinutils/bfd/tekhex.c,
	  support/sdbinutils/bfd/cpu-ia64-opc.c,
	  support/sdbinutils/bfd/coff-ia64.c,
	  support/sdbinutils/bfd/peXXigen.c,
	  support/sdbinutils/bfd/elfnn-ia64.c,
	  support/sdbinutils/bfd/bdfwin.c,
	  support/sdbinutils/opcodes,
	  support/sdbinutils/opcodes/ia64-opc.h:
	  removed unused files
	* Makefile.in, support/scripts/sdcc.nsi, doc/sdccman.lyx,
	  support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in,
	  support/sdbinutils/bfd/targets.c,
	  support/sdbinutils/binutils/ieee.c,
	  support/sdbinutils/binutils/rddbg.c,
	  support/sdbinutils/binutils/not-strip.c,
	  support/sdbinutils/binutils/objcopy.c,
	  support/sdbinutils/binutils/budbg.h,
	  support/sdbinutils/binutils/rdcoff.c,
	  support/sdbinutils/binutils/wrstabs.c,
	  support/sdbinutils/binutils/debug.c,
	  support/sdbinutils/binutils/debug.h,
	  support/sdbinutils/binutils/stabs.c,
	  support/sdbinutils/include/ieee.h:
	  added binary target support, added sdobjcopy utility
	* support/regression/ports/ds390/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/ucr3ka/spec.mk:
	  increased timeouts due to the gcc-torture-execute-20050224-1
	  regression test timeout failures

2012-11-07 Borut Razem <borut.razem AT gmail.com>
